--- a/src/pages/asset/building.astro
+++ b/src/pages/asset/building.astro
@@ -44,7 +44,7 @@ const title = 'Building Asset Creation - Cities Skylines Modding';
 						alt="Triangle counts of some vanilla buildings"
 						format="webp"
 						sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-						class="h-auto w-full aspect-video"
+						class="h-auto w-full aspect-video object-cover"
 						loading="eager"
 					/></a
 				>
@@ -98,7 +98,7 @@ const title = 'Building Asset Creation - Cities Skylines Modding';
 						alt="Comparison between main and LOD meshes for a large and small building."
 						format="webp"
 						sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-						class="h-auto w-full aspect-video"
+						class="h-auto w-full aspect-video object-cover"
 						loading="eager"
 					/></a
 				>
@@ -122,7 +122,7 @@ const title = 'Building Asset Creation - Cities Skylines Modding';
 						alt="Example UV mapping using visible horizontal tiling on the bottom"
 						format="webp"
 						sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-						class="h-auto w-full aspect-video"
+						class="h-auto w-full aspect-square object-cover"
 						loading="eager"
 					/></a
 				>
@@ -148,7 +148,7 @@ const title = 'Building Asset Creation - Cities Skylines Modding';
 						alt="UV mapping for LOD mesh using automatic mapping in 3ds Max"
 						format="webp"
 						sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-						class="h-auto w-full aspect-video"
+						class="h-auto w-full aspect-square object-cover"
 						loading="eager"
 					/></a
 				>
@@ -200,7 +200,7 @@ const title = 'Building Asset Creation - Cities Skylines Modding';
 						alt="Vertex painting in 3ds Max"
 						format="webp"
 						sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-						class="h-auto w-full aspect-video"
+						class="h-auto w-full aspect-video object-cover"
 						loading="eager"
 					/></a
 				>
@@ -241,7 +241,7 @@ const title = 'Building Asset Creation - Cities Skylines Modding';
 						alt="Texture sizes of various vanilla buildings"
 						format="webp"
 						sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-						class="h-auto w-full aspect-video"
+						class="h-auto w-full aspect-video object-cover"
 						loading="eager"
 					/></a
 				>
@@ -316,7 +316,7 @@ const title = 'Building Asset Creation - Cities Skylines Modding';
 							alt="Color guidelines"
 							format="webp"
 							sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-							class="h-auto w-full aspect-video object-cover"
+							class="h-auto w-full aspect-square object-cover"
 							loading="eager"
 						/></a
 					>
@@ -349,7 +349,7 @@ const title = 'Building Asset Creation - Cities Skylines Modding';
 							alt="Example alpha texture for some railings and metal beams"
 							format="webp"
 							sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-							class="h-auto w-full aspect-video"
+							class="h-auto w-full aspect-video object-cover"
 							loading="eager"
 						/></a
 					>
@@ -365,7 +365,7 @@ const title = 'Building Asset Creation - Cities Skylines Modding';
 							alt="Example alpha texture for some railings and metal beams"
 							format="webp"
 							sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-							class="h-auto w-full aspect-video"
+							class="h-auto w-full aspect-video object-cover"
 							loading="eager"
 						/></a
 					>
@@ -421,7 +421,7 @@ const title = 'Building Asset Creation - Cities Skylines Modding';
 						alt="Example illumination map showing both gradients"
 						format="webp"
 						sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-						class="h-auto w-full aspect-video"
+						class="h-auto w-full aspect-video object-cover"
 						loading="eager"
 					/></a
 				>
@@ -462,7 +462,7 @@ const title = 'Building Asset Creation - Cities Skylines Modding';
 							alt="Example specular map showing high values for windows and very low values for the rest"
 							format="webp"
 							sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-							class="h-auto w-full aspect-video"
+							class="h-auto w-full aspect-video object-cover"
 							loading="eager"
 						/></a
 					>
@@ -478,7 +478,7 @@ const title = 'Building Asset Creation - Cities Skylines Modding';
 							alt="Transitions between different specular values produce artifacts on the normal map and vice versa"
 							format="webp"
 							sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-							class="h-auto w-full aspect-video"
+							class="h-auto w-full aspect-video object-cover"
 							loading="eager"
 						/></a
 					>
@@ -524,7 +524,7 @@ const title = 'Building Asset Creation - Cities Skylines Modding';
 							alt="Example normal map showing flat windows"
 							format="webp"
 							sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-							class="h-auto w-full aspect-video"
+							class="h-auto w-full aspect-video object-cover"
 							loading="eager"
 						/></a
 					>
@@ -540,7 +540,7 @@ const title = 'Building Asset Creation - Cities Skylines Modding';
 							alt="Example normal map problem"
 							format="webp"
 							sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-							class="h-auto w-full aspect-video"
+							class="h-auto w-full aspect-video object-cover"
 							loading="eager"
 						/></a
 					>
@@ -556,7 +556,7 @@ const title = 'Building Asset Creation - Cities Skylines Modding';
 							alt="Image shows the same flat normal map on faces with different UV rotation/flip"
 							format="webp"
 							sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-							class="h-auto w-full aspect-video"
+							class="h-auto w-full aspect-video object-cover"
 							loading="eager"
 						/>
 					</a>
@@ -629,7 +629,7 @@ const title = 'Building Asset Creation - Cities Skylines Modding';
 						alt="Files ready for import"
 						format="webp"
 						sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-						class="h-auto w-full aspect-video object-contain"
+						class="h-auto w-full aspect-video object-cover"
 						loading="eager"
 					/>
 				</a>
@@ -708,7 +708,7 @@ const title = 'Building Asset Creation - Cities Skylines Modding';
 						alt="Importing a mesh in asset importer"
 						format="webp"
 						sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-						class="h-auto w-full aspect-video object-contain"
+						class="h-auto w-full aspect-video object-cover"
 						loading="eager"
 					/>
 				</a>
@@ -809,7 +809,7 @@ const title = 'Building Asset Creation - Cities Skylines Modding';
 						alt="For growables, the lot also includes an optional yard area for props"
 						format="webp"
 						sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-						class="h-auto w-full aspect-video object-contain"
+						class="h-auto w-full aspect-video object-cover"
 						loading="eager"
 					/>
 				</a>
@@ -879,7 +879,7 @@ const title = 'Building Asset Creation - Cities Skylines Modding';
 						alt="Vanilla train station pedestrian paths (magenta) connecting the roadside to the platform"
 						format="webp"
 						sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-						class="h-auto w-full aspect-video object-contain"
+						class="h-auto w-full aspect-video object-cover"
 						loading="eager"
 					/>
 				</a>
@@ -981,7 +981,7 @@ const title = 'Building Asset Creation - Cities Skylines Modding';
 						alt="The clip brush is uneven and unreliable"
 						format="webp"
 						sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-						class="h-auto w-full aspect-video object-contain"
+						class="h-auto w-full aspect-video object-cover"
 						loading="eager"
 					/>
 				</a>
@@ -1021,7 +1021,7 @@ const title = 'Building Asset Creation - Cities Skylines Modding';
 						alt="Once a sub-building has been added, you can change its position precisely"
 						format="webp"
 						sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-						class="h-auto w-full aspect-video object-contain"
+						class="h-auto w-full aspect-video object-cover"
 						loading="eager"
 					/>
 				</a>
@@ -1221,7 +1221,7 @@ const title = 'Building Asset Creation - Cities Skylines Modding';
 						alt="ModTools scene explorer and console"
 						format="webp"
 						sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-						class="h-auto w-full aspect-video object-contain"
+						class="h-auto w-full aspect-video object-cover"
 						loading="eager"
 					/>
 				</a>
@@ -1304,7 +1304,7 @@ const title = 'Building Asset Creation - Cities Skylines Modding';
 						alt="Comparison between Default (left), NoBase (middle) and Fence (right) building shaders"
 						format="webp"
 						sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-						class="h-auto w-full aspect-video object-contain"
+						class="h-auto w-full aspect-video object-cover"
 						loading="eager"
 					/>
 				</a>
@@ -1340,7 +1340,7 @@ const title = 'Building Asset Creation - Cities Skylines Modding';
 						alt="On winter maps, snow doesn't appear on the NoBase shader"
 						format="webp"
 						sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-						class="h-auto w-full aspect-video object-contain"
+						class="h-auto w-full aspect-video object-cover"
 						loading="eager"
 					/>
 				</a>
@@ -1515,7 +1515,7 @@ const title = 'Building Asset Creation - Cities Skylines Modding';
 						alt="Save asset window"
 						format="webp"
 						sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-						class="h-auto w-full aspect-video"
+						class="h-auto w-full aspect-video object-cover"
 						loading="eager"
 					/>
 				</a>
@@ -1568,7 +1568,7 @@ const title = 'Building Asset Creation - Cities Skylines Modding';
 						alt="CRP files in the local assets folder"
 						format="webp"
 						sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-						class="h-auto w-full aspect-video"
+						class="h-auto w-full aspect-video object-cover"
 						loading="eager"
 					/>
 				</a>
