--- a/src/pages/files/index.astro
+++ b/src/pages/files/index.astro
@@ -1,7 +1,7 @@
 ---
-import MainLayout from '../layouts/MainLayout.astro';
-import Link from '../components/Link.astro';
-import TableOfContents from '../components/TableOfContents.astro';
+import MainLayout from '../../layouts/MainLayout.astro';
+import Link from '../../components/Link.astro';
+import TableOfContents from '../../components/TableOfContents.astro';
 const title = 'Source Files - Cities Skylines Modding';
 ---
 
